--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,9 @@
 
 {deps, [
   {granderl, ".*",
-    {git, "https://github.com/tokenrove/granderl.git", {tag, "v0.1.4"}}}
+    {git, "https://github.com/tokenrove/granderl.git", {tag, "v0.1.4"}}},
+  {statsderl, "0.4.3",
+    {git, "https://github.com/lpgauth/statsderl.git", {tag, "0.4.3"}}}
 ]}.
 
 {edoc_opts, [
