--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,8 @@
 {coveralls_service_name, "travis-ci"}.
 
 {deps, [
-  {granderl, "0.1.5"}
+  {granderl, "0.1.5"},
+  {metal, "0.1.0"}
 ]}.
 
 {edoc_opts, [
