--- a/rebar.config
+++ b/rebar.config
@@ -59,7 +59,7 @@
       {fprofx,
         {git, "https://github.com/lpgauth/fprofx.git", {branch, "otp_19"}}},
       {timing,
-        {git, "https://github.com/lpgauth/timing.git", {branch, "master"}}}
+        {git, "https://github.com/lpgauth/timing.git", {branch, "errors"}}}
     ]},
     {plugins, [
       {coveralls,
